tests/bad_programs/syntax_errors/decl_two_types_different.notc
int main() {
    int double var;
}
